# FANUC-Robot-Arm-control-ROS2-Gazebo-

./: README.md
Ros2_Workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Ros2_Workspace/install/CRX-10iA_L_description/share/CRX-10iA_L_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Ros2_Workspace/install/CRX-10iA_L_description/share/CRX-10iA_L_description/launch/: display.launch.py
Ros2_Workspace/install/CRX-10iA_L_description/share/CRX-10iA_L_description/meshes/: CRX-10iAL_Axis1_1.stl  CRX-10iAL_Axis3_1.stl  CRX-10iAL_MotionEnvelope_J5AxisRotation_1.stl
Ros2_Workspace/install/mycobot_gazebo/share/mycobot_gazebo/: local_setup.sh  package.sh  package.xml
Ros2_Workspace/install/robot_control/lib/robot_control/: motion_control
Ros2_Workspace/install/robot_control/share/robot_control/: CRX-10iAL_Axis2_1.stl  CRX-10iAL_Axis5_1.stl  CRX-10iAL_MaxReachReference_1.stl  CRX-10iA_L.gazebo  CRX-10iA_L.trans  J1PLATE.stl  joint_controller.yaml  package.sh  package.xml
Ros2_Workspace/install/robot_control/share/robot_control/launch/: gazebo.launch.py  motion.launch.py
Ros2_Workspace/install/robot_control/share/robot_control/meshes/: CAM.stl  CONNECTOR_UNIT.stl  CORDGRIP.stl  CRX-10iAL_Axis4_1.stl  base_link.stl
Ros2_Workspace/log/: latest_build
Ros2_Workspace/src/CRX-10iA_L_description/: package.xml  setup.cfg  setup.py
Ros2_Workspace/src/CRX-10iA_L_description/launch/: gazebo.launch.py
Ros2_Workspace/src/CRX-10iA_L_description/meshes/: CRX-10iAL_Axis6_WithConnectors_1.stl  CRX-10iAL_MotionEnvelope_EndofFlange_1.stl
Ros2_Workspace/src/CRX-10iA_L_description/urdf/: CRX-10iA_L.xacro  materials.xacro
Ros2_Workspace/src/robot_control/: CMakeLists.txt
Ros2_Workspace/src/robot_control/config/: joint_controller.yaml
Ros2_Workspace/src/robot_control/src/: motion_control.cpp
(+2 files in other folders)
